# homa

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: workflow.yml
homa/: __init__.py  camera.py  datasets.py  events.py  filters.py  helpers.py  main.py  orientation.py  shapes.py  spaces.py
homa/classes/: Circle.py  Collection.py  Image.py  Logger.py  Repository.py  Window.py  WindowRepository.py
homa/helpers/: alias.py  environment.py  kernel.py  string.py
src/homa/: __init__.py  cli.py  device.py  settings.py  utils.py
src/homa/activation/: APLU.py  GALU.py  MELU.py  PDELU.py  SmallGALU.py  WideMELU.py  __init__.py  utils.py
src/homa/activations/: AOAF.py  APLU.py  AbsLU.py  AdaptiveActivationFunction.py  BaseDLReLU.py  CReLU.py  DLReLU.py  DLU.py  DRLU.py  DerivativeSiLU.py  DiffELU.py  DoubleSiLU.py  EANAF.py  ExponentialDLReLU.py  ExponentialSwish.py  FlattedTSwish.py  GeneralizedSwish.py  IpLU.py  LogSigmoid.py  Logish.py  MaxSig.py  MexicanReLU.py  MinSin.py  NLReLU.py  NReLU.py  NoisyReLU.py  OAF.py  PFLU.py  PLAF.py  PLogish.py  ParametricLogish.py  Phish.py  PoLU.py  PolyLU.py  REU.py  RReLU.py  RandomizedSlopedReLU.py  ReCU.py  RePU.py  ReSP.py  (+26 more)
src/homa/cli/: CommandTable.py  Handler.py  HomaCommand.py
src/homa/commands/: CommandTable.py
src/homa/common/: __init__.py  utils.py
src/homa/core/: FeedForward.py
tests/: test_ensemble.py  test_images.py  test_resnet.py  test_stochastic_resnet.py
tests/actionvation/: test_initialization.py
tests/activation/: test_channel_based_learnable_functions.py  test_regular_activations.py
tests/ensemble/: test_stochastic_swin_ensemble.py
tests/vision/: test_resnet.py  test_stochastic_swin.py
(+216 files in other folders)
