[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "homa"
version = "0.0.13"
description = "A curated list of machine learning and deep learning helpers."
authors = [
  { name="Taha Shieenavaz", email="tahashieenavaz@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.7"

dependencies = [
  "numpy",
  "torch",
]

[project.scripts]
homa = "homa.cli.Handler:Handler.main"

[tool.setuptools.packages.find]
where = ["src"]
