[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "homa"
version = "0.3.294"
description = "A curated list of machine learning and deep learning helpers."
authors = [
  { name="Taha Shieenavaz", email="tahashieenavaz@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.7"

dependencies = [
  "numpy",
  "torch",
  "fire"
]

[project.scripts]
homa = "homa.cli.HomaCommand:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"homa.cli" = ["*"]